# agentic

./: .dockerignore  .gitignore  Dockerfile  README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/agents/: activities.py  base.py  budget.py  calendar.py  flights.py  food.py  hotels.py  monitoring.py  orchestrator.py  planner.py  registry.py  route.py  weather.py
backend/app/api/: routes.py
backend/app/core/: config.py  database.py  logging.py
backend/app/models/: orm.py  schemas.py
backend/app/services/: activities.py  cities.py  flights.py  food.py  geocoding.py  hotels.py  maps.py  pdf_export.py  weather.py
backend/tests/: test_agents.py  test_api.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: BudgetView.tsx  ChatPanel.tsx  DatePicker.tsx  ItineraryView.tsx  MapView.tsx  ReasoningSteps.tsx  TripSidebar.tsx
