[project]
name = "holidaypilot"
version = "0.1.0"
description = "AI-powered multi-agent holiday planner"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "openai>=1.30.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1.0",
    "weasyprint>=62.0",
    "icalendar>=5.0",
    "structlog>=24.0",
    "tenacity>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
